traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Erreur de compilation :
TraversalZigZag:15: error: ')' expected but 'else' found.
    else {
    ^